--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Grayscale - Start Bootstrap Theme</title>
+  <title>Project Health</title>
 
   <!-- Bootstrap core CSS -->
   <link href="required/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -36,13 +36,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">O nas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+            <a class="nav-link" href="/user-register">Zarejestruj</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
+            <a class="nav-link" href="/user-login">Zaloguj</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/offer">Oferta</a>
           </li>
         </ul>
       </div>
@@ -53,9 +56,9 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
-        <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
+        <h1 class="mx-auto my-0 text-uppercase"> Project health</h1>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5"> zaczynij żyć zdrowo z naszą aplikacją </h2>
+        <a href="#about" class="btn btn-primary js-scroll-trigger"> O nas </a>
       </div>
     </div>
   </header>
@@ -65,9 +68,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+          <h2 class="text-white mb-4">Poznaj nas</h2>
+          <p class="text-white-50"> Aplikacja powstała w ramach  projektu końcowego na kursie "Java od podstaw"
+            <a href="https://sdacademy.pl">the preview page</a>. Zachęcamy do udziału w kursie</p>
         </div>
       </div>
       <img src="required/img/ipad.png" class="img-fluid" alt="">
