kompletna strona startowa

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,11 +28,10 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
-        <i class="fas fa-bars"></i>
-      </button>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Strona startowa</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu
+        <i class="fas fa-bars">
+        </i></button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -69,8 +68,8 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">Poznaj nas</h2>
-          <p class="text-white-50"> Aplikacja powstała w ramach  projektu końcowego na kursie "Java od podstaw"
-            <a href="https://sdacademy.pl">the preview page</a>. Zachęcamy do udziału w kursie</p>
+          <p class="text-white-50"> Jesteśmy grupą czterech młodych osób, króre 7 miesięcy temu zdecydowaly się zmienić swoje życie zapisując się na kurs "Java od podstaw"
+            <a href="https://sdacademy.pl"> w Software Development Academy </a>. Tymczasem  ta aplikacja, którą stworzyliśmy w ramach projektu końcowego - liczymy że zmieni Twoje życie !  </p>
         </div>
       </div>
       <img src="required/img/ipad.png" class="img-fluid" alt="">
@@ -88,8 +87,8 @@
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4>Shoreline</h4>
-            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+            <h4> Oferta </h4>
+            <p class="text-black-50 mb-0"> Aplikacja jest w pełni darmowa zarówno dla dietetyków, jak i dla osób szukających profesjonalnego wsparcia. </p>
           </div>
         </div>
       </div>
@@ -103,8 +102,8 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Misty</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <h4 class="text-white">Dietetyku</h4>
+                <p class="mb-0 text-white-50"> stworzyliśmy narzędzie, które usprawni Twoją pracę poprzez ułatwiony dostęp do potencjalnych klientów. Zapewniamy, że zarządzanie planami żywieniowymi Twoich podopiecznych jeszcze nigdy nie było tak proste! </p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -121,8 +120,8 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Mountains</h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                <h4 class="text-white"> Użytkowniku </h4>
+                <p class="mb-0 text-white-50">jeżeli szukasz pomocy doświadczonych dietetyków - trafiłeś doskonale! Aplikacja ta zapewni Ci kontakt z dietetykiem i wygodny dostęp do Twojej diety.  </p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -140,11 +139,11 @@
         <div class="col-md-10 col-lg-8 mx-auto text-center">
 
           <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-          <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
+          <h2 class="text-white mb-5"> Zachęcamy do subskrybcji !</h2>
 
           <form class="form-inline d-flex">
-            <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
-            <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
+            <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Wystarczy podać swój e-mail...">
+            <button type="submit" class="btn btn-primary mx-auto">Subskrybuj</button>
           </form>
 
         </div>
@@ -162,9 +161,9 @@
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Address</h4>
+              <h4 class="text-uppercase m-0">Adres</h4>
               <hr class="my-4">
-              <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+              <div class="small text-black-50"> Wrocław, Poland</div>
             </div>
           </div>
         </div>
@@ -176,7 +175,7 @@
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">hello@yourdomain.com</a>
+                <a href="#">project-health@gmail.com</a>
               </div>
             </div>
           </div>
@@ -186,9 +185,9 @@
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-mobile-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Phone</h4>
+              <h4 class="text-uppercase m-0">Telefon</h4>
               <hr class="my-4">
-              <div class="small text-black-50">+1 (555) 902-8832</div>
+              <div class="small text-black-50">+48 111 222 333</div>
             </div>
           </div>
         </div>
