--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -2,39 +2,39 @@
 <html lang="pl">
 <head>
 
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="">
-<meta name="author" content="">
+<!--<meta charset="utf-8">-->
+<!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
+<!--<meta name="description" content="">-->
+<!--<meta name="author" content="">-->
 
-<title>Project Health</title>
 
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Project Health</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="required/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom fonts for this template -->
+    <link href="required/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="required/css/grayscale.min.css" rel="stylesheet">
 
 </head>
-<div class="form-group">
-
-    <label>Nazwa użytkownika</label>
-
-    <input type="email" required name="email" id="email" class="form-control" placeholder="Podaj e-mail"/> </div>
-<div class="form-group">
-                    <label for="firstName">Imię</label>
-                    <input type="text" required name="name" id="firstName" class="form-control" placeholder="Podaj imię"/>
-                </div>
-                <div class="form-group">
-                    <label for="lastName">Nazwisko</label>
-                    <input type="text" required name="lastName" id="lastName" class="form-control" placeholder="Podaj nazwisko"/>
-                </div>
-                <div class="form-group">
-                    <label for="password">Hasło</label>
-                    <input type="password" required name="password" id="password" class="form-control" placeholder="Podaj hasło"/>
-                </div>
-                <button class="btn btn-primary" type="submit">Zarejestruj</button>
-                <button class="btn btn-secondary" type="reset">Wyczyść dane</button>
-
-            </form>
-        </div>
-        <div class="col-5"></div>
-    </div>
+<body>
+<div>
+    <li class="nav-item">
+    <a class="nav-link" href="/register-di">Zarejestruj jako dietetyk</a>
+    </li>
+    <li class="nav-item">
+    <a class="nav-link" href="/register-patient"> Zarejestruj jako klient</a>
+    </li>
 </div>
-</body>
-</html>
+
+
