--- a/src/main/resources/templates/register-dietician.html
+++ b/src/main/resources/templates/register-dietician.html
@@ -25,15 +25,15 @@
 
 
 <div class="container">
-    <div class="row" style="margin-top: 40px">
+    <div class="row" style="margin-top: 10px">
         <div class="col-1"></div>
-        <div class="col-10" style="padding-bottom: 20px"><h2>Rejestracja</h2></div>
+        <div class="col-10" style="padding-bottom: 20px"><h2>Rejestracja - dietetyk</h2></div>
         <div class="col-1"></div>
     </div>
     <div class="row">
         <div class="col-1"></div>
         <div class="col-6">
-            <form method="post" action="/register">
+            <form method="post" action="/add-dietician">
                 <div class="form-group">
                     <label for="email"> E-mail </label>
                     <input type="text" required name="email" id="email"  class="form-control" placeholder="Podaj e-mail"/>
@@ -50,6 +50,11 @@
                     <label for="password">Hasło</label>
                     <input type="password" required name="password" id="password" class="form-control" placeholder="Podaj hasło"/>
                 </div>
+                <div class="form-group">
+                    <label for="licenceNumber">Numer licencji</label>
+                    <input type="text" required name="licenceNumber" id="licenceNumber" class="form-control" placeholder="Podaj numer licencji"/>
+                </div>
+
                 <button class="btn btn-primary" type="submit">Zarejestruj</button>
                 <button class="btn btn-secondary" type="reset">Wyczyść dane</button>
             </form>
