--- a/src/main/resources/templates/register-patient.html
+++ b/src/main/resources/templates/register-patient.html
@@ -26,13 +26,13 @@
 <div class="container">
     <div class="row" style="margin-top: 40px">
         <div class="col-1"></div>
-        <div class="col-10" style="padding-bottom: 20px"><h2>Rejestracja</h2></div>
+        <div class="col-10" style="padding-bottom: 20px"><h2>Rejestracja - pacjent </h2></div>
         <div class="col-1"></div>
     </div>
     <div class="row">
         <div class="col-1"></div>
         <div class="col-6">
-            <form method="post" action="/register">
+            <form method="post" action="/add-patient">
                 <div class="form-group">
                     <label for="email"> E-mail </label>
                     <input type="text" required name="email" id="email"  class="form-control" placeholder="Podaj e-mail"/>
@@ -48,6 +48,22 @@
                 <div class="form-group">
                     <label for="password">Hasło</label>
                     <input type="password" required name="password" id="password" class="form-control" placeholder="Podaj hasło"/>
+                </div>
+                <div class="form-group">
+                    <label for="birthDate">Data urodzenia</label>
+                    <input type="date" required name="birthDate" id="birthDate" class="form-control" placeholder="Podaj datę urodzenia"/>
+                </div>
+                <div class="form-group">
+                    <label for="gender">Płeć</label>
+                    <select class="custom-select my-1 mr-sm-2" id="gender" name="gender">
+                        <option selected>Wybierz...</option>
+                        <option value="kobieta">Kobieta</option>
+                        <option value="mezczyzna">Mężczyzna</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for = "phoneNumber"> Numer telefonu </label>
+                    <input type="number" required name="phoneNumber" id="phoneNumber" class="form-control" placeholder="Podaj numer telefonu"/>
                 </div>
                 <button class="btn btn-primary" type="submit">Zarejestruj</button>
                 <button class="btn btn-secondary" type="reset">Wyczyść dane</button>
