--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -213,11 +213,11 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-black small text-center text-white-50">
-    <div class="container">
-      Copyright &copy; Your Website 2019
-    </div>
-  </footer>
+<!--  <footer class="bg-black small text-center text-white-50">-->
+<!--    <div class="container">-->
+<!--      Copyright &copy; Your Websit-->
+<!--    </div>-->
+<!--  </footer>-->
 
   <!-- Bootstrap core JavaScript -->
   <script src="required/vendor/jquery/jquery.min.js"></script>
