--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -39,12 +39,7 @@
                     <label for="password">Hasło</label>
                     <input type="password" required name="password" id="password" class="form-control" placeholder="Podaj hasło"/>
                 </div>
-                <div class="form-group form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                </div>
-
-                <button class="btn btn-primary" type="submit">Zarejestruj</button>
+                <button class="btn btn-primary" type="submit">Zaloguj</button>
                 <button class="btn btn-secondary" type="reset">Wyczyść dane</button>
 
 
