--- a/src/main/resources/templates/dietetican-panel.html
+++ b/src/main/resources/templates/dietetican-panel.html
@@ -302,7 +302,7 @@
           <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="mr-2 d-none d-lg-inline text-gray-600 small" th:text="${dietician.name} + ' ' + ${dietician.lastName}"></span>
-              <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
+<!--              <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">-->
             </a>
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
@@ -355,7 +355,7 @@
               <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                 <thead>
                 <tr>
-                  <th>Imie</th>
+                  <th><a href="#"></a>Imie</th>
                   <th>Nazwisko</th>
                   <th>E-mail</th>
                   <th>Numer telefonu</th>
@@ -363,14 +363,17 @@
                 </tr>
                 </thead>
                 <tbody>
+
                 <th:block th:each="patient : ${dietician.patientSet}" >
-                <tr>
-                  <td th:text="${patient.name}" ></td>
-                  <td th:text="${patient.lastName}" ></td>
-                  <td th:text="${patient.email}" ></td>
-                  <td th:text="${patient.phoneNumber}" ></td>
+
+                  <tr>
+                    <td><a href="/indexpatient" th:text="${patient.name}" > </a></td>
+                    <td><a href="/indexpatient" th:text="${patient.lastName}"></a></td>
+                    <td><a href="/indexpatient" th:text="${patient.email}" > </a></td>
+                    <td> <a href="/indexpatient" th:text="${patient.phoneNumber}" > </a></td>
                   <td th:text="${patient.createAt}" ></td>
-                </tr>
+
+                  </tr>
                 </th:block>
                 </tbody>
               </table>
