--- a/src/main/resources/templates/dietetican-panel.html
+++ b/src/main/resources/templates/dietetican-panel.html
@@ -30,7 +30,7 @@
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
       <div class="sidebar-brand-icon rotate-n-15">
-        <i class="fas fa-laugh-wink"></i>
+        <i class="fas fa-apple-alt" size="3px"></i>
       </div>
       <div class="sidebar-brand-text mx-3">Witaj Dietetyku</div>
     </a>
@@ -39,10 +39,21 @@
     <hr class="sidebar-divider my-0">
 
     <!-- Nav Item - Dashboard -->
+<!--    <li class="nav-item active">-->
+<!--      <a class="nav-link" href="index.html">-->
+<!--        <i class="fas fa-fw fa-tachometer-alt"></i>-->
+<!--        <span>Panel dowodzenia grubaskami</span></a>-->
+<!--    </li>-->
     <li class="nav-item active">
-      <a class="nav-link" href="index.html">
-        <i class="fas fa-fw fa-tachometer-alt"></i>
-        <span>Panel dowodzenia grubaskami</span></a>
+      <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
+        <i class="fas fa-users-cog" size="2px"></i>
+        <span>Panel dowodzenia grubaskami </span>
+      </a>
+      <div id="collapsePages" class="collapse show" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+        <div class="bg-white py-2 collapse-inner rounded">
+          <a class="collapse-item active" href="/"> Dodaj Pacjenta</a>
+        </div>
+      </div>
     </li>
 
     <!-- Divider -->
@@ -94,27 +105,17 @@
     </div>
 
     <!-- Nav Item - Pages Collapse Menu -->
-    <li class="nav-item">
-      <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
-        <i class="fas fa-fw fa-folder"></i>
-        <span>Pages</span>
-      </a>
-      <div id="collapsePages" class="collapse show" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-        <div class="bg-white py-2 collapse-inner rounded">
-          <h6 class="collapse-header">Login Screens:</h6>
-          <a class="collapse-item" href="login.html">Login</a>
-          <a class="collapse-item" href="admin/register.html">Register</a>
-          <a class="collapse-item" href="admin/forgot-password.html">Forgot Password</a>
-          <div class="collapse-divider"></div>
-          <h6 class="collapse-header">Other Pages:</h6>
-          <a class="collapse-item" href="admin/404.html">404 Page</a>
-          <a class="collapse-item active" href="admin/blank.html"> Dodaj Pacjenta</a>
-
-
-
-        </div>
-      </div>
-    </li>
+<!--    <li class="nav-item">-->
+<!--      <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">-->
+<!--        <i class="fas fa-fw fa-folder"></i>-->
+<!--        <span>Pacjenci</span>-->
+<!--      </a>-->
+<!--      <div id="collapsePages" class="collapse show" aria-labelledby="headingPages" data-parent="#accordionSidebar">-->
+<!--        <div class="bg-white py-2 collapse-inner rounded">-->
+<!--          <a class="collapse-item active" href="/"> Dodaj Pacjenta</a>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </li>-->
 
 
     <!-- Nav Item - Charts -->
@@ -359,7 +360,7 @@
                   <th>Nazwisko</th>
                   <th>E-mail</th>
                   <th>Numer telefonu</th>
-                  <th></th>
+                  <th>Dodano</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -367,12 +368,11 @@
                 <th:block th:each="patient : ${dietician.patientSet}" >
 
                   <tr>
-                    <td><a href="/indexpatient" th:text="${patient.name}" > </a></td>
-                    <td><a href="/indexpatient" th:text="${patient.lastName}"></a></td>
-                    <td><a href="/indexpatient" th:text="${patient.email}" > </a></td>
-                    <td> <a href="/indexpatient" th:text="${patient.phoneNumber}" > </a></td>
-                  <td th:text="${patient.createAt}" ></td>
-
+                    <td><a href="/idpatient" th:text="${patient.name}" > </a></td>
+                    <td><a href="/idpatient" th:text="${patient.lastName}"></a></td>
+                    <td><a href="/idpatient" th:text="${patient.email}" > </a></td>
+                    <td> <a href="/idpatient" th:text="${patient.phoneNumber}" > </a></td>
+                    <td> <a href="/idpatient" th:text="${patient.createAt}" ></a></td>
                   </tr>
                 </th:block>
                 </tbody>
