--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
           </li>
           <li class="dropdown">
             <a class="nav-link"id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Zarejestruj </a>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <div class="dropdown-menu bg-primary" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item btn btn-primary" href="/register-dietician">Dietetyk</a>
                 <a class="dropdown-item btn btn-primary" href="/register-patient">Pacjent</a>
               </div>
