--- a/src/main/resources/templates/dietetican-panel.html
+++ b/src/main/resources/templates/dietetican-panel.html
@@ -368,11 +368,11 @@
                 <th:block th:each="patient : ${dietician.patientSet}" >
 
                   <tr>
-                    <td><a th:href="@{'/progress/' + ${patient.id}}" th:text="${patient.name}" > </a></td>
-                    <td><a th:href="@{'/progress/' + ${patient.id}}" th:text="${patient.lastName}"></a></td>
-                    <td><a th:href="@{'/progress/' + ${patient.id}}" th:text="${patient.email}" > </a></td>
-                    <td><a th:href="@{'/progress/' + ${patient.id}}" th:text="${patient.phoneNumber}" > </a></td>
-                    <td><a th:href="@{'/progress/' + ${patient.id}}" th:text="${patient.createAt}"> </a> </td>
+                    <td><a th:href="@{'/' + ${patient.id}}" th:text="${patient.name}" > </a></td>
+                    <td><a th:href="@{'/' + ${patient.id}}" th:text="${patient.lastName}"></a></td>
+                    <td><a th:href="@{'/' + ${patient.id}}" th:text="${patient.email}" > </a></td>
+                    <td><a th:href="@{'/' + ${patient.id}}" th:text="${patient.phoneNumber}" > </a></td>
+                    <td><a th:href="@{'/' + ${patient.id}}" th:text="${patient.createAt}"> </a> </td>
                   </tr>
                 </th:block>
                 </tbody>
@@ -419,15 +419,15 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Już nas opuszczasz?</h5>
         <button class="close" type="button" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
       </div>
-      <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+      <div class="modal-body">Czy na pewno chcesz się wylogować?</div>
       <div class="modal-footer">
-        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-        <a class="btn btn-primary" href="/logout">Logout</a>
+        <button class="btn btn-secondary" type="button" data-dismiss="modal">Zamknij</button>
+        <a class="btn btn-primary" href="/logout">Wyloguj</a>
       </div>
     </div>
   </div>
