--- a/src/main/resources/templates/dietetican-panel.html
+++ b/src/main/resources/templates/dietetican-panel.html
@@ -47,7 +47,7 @@
     <li class="nav-item active">
       <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
         <i class="fas fa-users-cog" size="2px"></i>
-        <span>Panel dowodzenia grubaskami </span>
+        <span>Twoi Pacjenci </span>
       </a>
       <div id="collapsePages" class="collapse show" aria-labelledby="headingPages" data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
@@ -67,14 +67,13 @@
     <!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item">
       <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-        <i class="fas fa-fw fa-cog"></i>
-        <span>Components</span>
+        <i class="fas fa-carrot"></i>
+        <span>Dieta</span>
       </a>
       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
-          <h6 class="collapse-header">Custom Components:</h6>
-          <a class="collapse-item" href="admin/buttons.html">Buttons</a>
-          <a class="collapse-item" href="admin/cards.html">Cards</a>
+          <a class="collapse-item" href="admin/buttons.html">Baza składników</a>
+          <a class="collapse-item" href="admin/cards.html">Posiłki</a>
         </div>
       </div>
     </li>
@@ -82,27 +81,18 @@
     <!-- Nav Item - Utilities Collapse Menu -->
     <li class="nav-item">
       <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
-        <i class="fas fa-fw fa-wrench"></i>
-        <span>Utilities</span>
+        <i class="fas fa-heartbeat"></i>
+        <span>Wskazówki i uwagi</span>
       </a>
-      <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-        <div class="bg-white py-2 collapse-inner rounded">
-          <h6 class="collapse-header">Custom Utilities:</h6>
-          <a class="collapse-item" href="admin/utilities-color.html">Colors</a>
-          <a class="collapse-item" href="admin/utilities-border.html">Borders</a>
-          <a class="collapse-item" href="admin/utilities-animation.html">Animations</a>
-          <a class="collapse-item" href="admin/utilities-other.html">Other</a>
-        </div>
-      </div>
     </li>
 
-    <!-- Divider -->
-    <hr class="sidebar-divider">
+<!--    &lt;!&ndash; Divider &ndash;&gt;-->
+<!--    <hr class="sidebar-divider">-->
 
-    <!-- Heading -->
-    <div class="sidebar-heading">
-      Addons
-    </div>
+<!--    &lt;!&ndash; Heading &ndash;&gt;-->
+<!--    <div class="sidebar-heading">-->
+<!--      Addons-->
+<!--    </div>-->
 
     <!-- Nav Item - Pages Collapse Menu -->
 <!--    <li class="nav-item">-->
@@ -116,21 +106,6 @@
 <!--        </div>-->
 <!--      </div>-->
 <!--    </li>-->
-
-
-    <!-- Nav Item - Charts -->
-    <li class="nav-item">
-      <a class="nav-link" href="admin/charts.html">
-        <i class="fas fa-fw fa-chart-area"></i>
-        <span>Charts</span></a>
-    </li>
-
-    <!-- Nav Item - Tables -->
-    <li class="nav-item">
-      <a class="nav-link" href="admin/tables.html">
-        <i class="fas fa-fw fa-table"></i>
-        <span>Tables</span></a>
-    </li>
 
     <!-- Divider -->
     <hr class="sidebar-divider d-none d-md-block">
