--- a/src/main/resources/templates/panel.html
+++ b/src/main/resources/templates/panel.html
@@ -40,10 +40,16 @@
       <hr class="sidebar-divider my-0">
 
       <!-- Nav Item - Dashboard -->
-      <li class="nav-item">
-        <a class="nav-link" href="index.html">
-          <i class="fas fa-fw fa-tachometer-alt"></i>
-          <span>Dashboard</span></a>
+      <li class="nav-item active">
+        <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
+          <i class="fas fa-users-cog" size="2px"></i>
+          <span>Panel główny </span>
+        </a>
+        <div id="collapsePages" class="collapse show" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+          <div class="bg-white py-2 collapse-inner rounded">
+            <a class="collapse-item active" href="/">Progress </a>
+          </div>
+        </div>
       </li>
 
       <!-- Divider -->
@@ -54,72 +60,51 @@
         Interface
       </div>
 
-      <!-- Nav Item - Pages Collapse Menu -->
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-          <i class="fas fa-fw fa-cog"></i>
-          <span>Components</span>
-        </a>
-        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Custom Components:</h6>
-            <a class="collapse-item" href="admin/buttons.html">Buttons</a>
-            <a class="collapse-item" href="admin/cards.html">Cards</a>
-          </div>
-        </div>
-      </li>
-
-      <!-- Nav Item - Utilities Collapse Menu -->
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
-          <i class="fas fa-fw fa-wrench"></i>
-          <span>DIETA</span>
+          <i class="fas fa-carrot"></i>
+          <span>Dieta</span>
         </a>
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <a class="collapse-item" href="admin/utilities-color.html">Baza składników</a>
-            <a class="collapse-item" href="admin/utilities-border.html">Stwórz posiłek</a>
+            <a class="collapse-item" href="admin/utilities-color.html">Baza posiłków</a>
             <a class="collapse-item" href="admin/utilities-animation.html">Plan żywieniowy</a>
           </div>
         </div>
       </li>
 
-      <!-- Divider -->
-      <hr class="sidebar-divider">
+      <!-- Nav Item - Pages Collapse Menu -->
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+          <i class="fas fa-heartbeat"></i>
+          <span>Wskazówki i uwagi</span>
+        </a>
+      </li>
 
-      <!-- Heading -->
-      <div class="sidebar-heading">
-        Addons
-      </div>
+      <!-- Nav Item - Utilities Collapse Menu -->
+
+
+<!--      &lt;!&ndash; Divider &ndash;&gt;-->
+<!--      <hr class="sidebar-divider">-->
+
+<!--      &lt;!&ndash; Heading &ndash;&gt;-->
+<!--      <div class="sidebar-heading">-->
+<!--        Addons-->
+<!--      </div>-->
 
       <!-- Nav Item - Pages Collapse Menu -->
-      <li class="nav-item active">
-        <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
-          <i class="fas fa-fw fa-folder"></i>
-          <span>Pages</span>
-        </a>
-        <div id="collapsePages" class="collapse show" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Login Screens:</h6>
-            <a class="collapse-item" href="admin/404.html">404 Page</a>
-            <a class="collapse-item active" href="admin/blank.html">Blank Page</a>
-          </div>
-        </div>
-      </li>
+<!--      <li class="nav-item active">-->
+<!--        <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">-->
+<!--          <i class="fas fa-fw fa-folder"></i>-->
+<!--          <span>Pages</span>-->
+<!--        </a>-->
+<!--        <div id="collapsePages" class="collapse show" aria-labelledby="headingPages" data-parent="#accordionSidebar">-->
+<!--          <div class="bg-white py-2 collapse-inner rounded">-->
+<!--            <a class="collapse-item active" href="admin/blank.html">Blank Page</a>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </li>-->
 
-      <!-- Nav Item - Charts -->
-      <li class="nav-item">
-        <a class="nav-link" href="admin/charts.html">
-          <i class="fas fa-fw fa-chart-area"></i>
-          <span>Charts</span></a>
-      </li>
-
-      <!-- Nav Item - Tables -->
-      <li class="nav-item">
-        <a class="nav-link" href="admin/tables.html">
-          <i class="fas fa-fw fa-table"></i>
-          <span>Tables</span></a>
-      </li>
 
       <!-- Divider -->
       <hr class="sidebar-divider d-none d-md-block">
