--- a/src/main/resources/templates/ingredient-register.html
+++ b/src/main/resources/templates/ingredient-register.html
@@ -374,7 +374,7 @@
                                    aria-describedby="nazwa" name="category"
                                    placeholder="Kategoria">
                             <br>
-                            <button class="btn btn-primary" type="button">Dodaj</button>
+                            <button class="btn btn-primary" type="submit">Dodaj</button>
                         </form>
                     </div>
                     <div class="col col-lg-8">
