--- a/src/main/resources/templates/ingredient-register.html
+++ b/src/main/resources/templates/ingredient-register.html
@@ -195,7 +195,7 @@
                         <h1 class="h3 mb-4 text-gray-800">Składniki</h1>
                         <form class="w-100" method="post" action="/ingredient-register">
                             <input type="text" class="form-control form-control-user" id="name" aria-describedby="nazwa"
-                                   placeholder="Nazwa składnika">
+                                   placeholder="Nazwa składnika" name="name">
                             <br>
                             <input type="number" class="form-control form-control-user" id="calories"
                                    aria-describedby="nazwa" name="calories"
