--- a/src/main/resources/templates/meal-register.html
+++ b/src/main/resources/templates/meal-register.html
@@ -37,7 +37,6 @@
 
     <!-- Divider -->
     <hr class="sidebar-divider my-0">
-
     <li class="nav-item active">
       <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
         <i class="fas fa-users-cog" size="2px"></i>
@@ -45,7 +44,7 @@
       </a>
       <div id="collapsePages" class="collapse show" aria-labelledby="headingPages" data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
-          <a class="collapse-item active" href="/"> Dodaj Pacjenta</a>
+          <a class="collapse-item active" href="/"> Pacjenci</a>
         </div>
       </div>
     </li>
@@ -67,7 +66,7 @@
       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
           <a class="collapse-item" href="admin/buttons.html">Baza składników</a>
-          <a class="collapse-item" href="meal-register.html">Posiłki</a>
+          <a class="collapse-item" href="/meal-register">Posiłki</a>
         </div>
       </div>
     </li>
