panele - konfiguracja progressu 1

--- a/src/main/resources/templates/panel.html
+++ b/src/main/resources/templates/panel.html
@@ -45,7 +45,7 @@
         </a>
         <div id="collapsePages" class="collapse show" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <a class="collapse-item active" href="/"> Pacjenci</a>
+            <a class="collapse-item active" href="/">Podsumowanie</a>
           </div>
         </div>
       </li>
