--- a/src/main/resources/templates/patient-panel.html
+++ b/src/main/resources/templates/patient-panel.html
@@ -249,37 +249,30 @@
                         <div class="input-group-prepend">
                             <div class="input-group-text">cm</div>
                         </div>
-                        <input type="text" class="form-control" name="progress" id="height" placeholder="wzrost">
+                        <input type="text" class="form-control" name="height" id="height" placeholder="wzrost">
                     </div>
-                </form>
-                <form class="form-inline" action="/progress-register" method="post">
                     <label class="sr-only">Waga</label>
                     <div class="input-group mb-2 mr-sm-2">
                         <div class="input-group-prepend">
                             <div class="input-group-text">kg </div>
                         </div>
-                        <input type="text" class="form-control" name="progress" id="weight" placeholder="waga">
+                        <input type="text" class="form-control" name="weight" id="weight" placeholder="waga">
                     </div>
-                </form>
-                <form class="form-inline" action="/progress-register" method="post">
                     <label class="sr-only">Waga docelowa</label>
                     <div class="input-group mb-2 mr-sm-2">
                         <div class="input-group-prepend">
                             <div class="input-group-text">kg </div>
                         </div>
-                        <input type="text" class="form-control" name="progress" id="targerWeight"
+                        <input type="text" class="form-control" name="targetWeight" id="targerWeight"
                                placeholder="waga docelowa">
                     </div>
-                </form>
-                <form class="form-inline" action="/progress-register" method="post">
                     <label class="sr-only">Komentarz</label>
                     <div class="input-group mb-2 mr-sm-2">
                         <div class="input-group-prepend">
                             <div class="input-group-text">txt </div>
                         </div>
-                        <input type="text" class="form-control" name="progress" id="commentary" placeholder="komentarz">
+                        <input type="text" class="form-control" name="commentary" id="commentary" placeholder="komentarz">
                     </div>
-                </form>
                 <button type="submit" class="btn btn-primary mb-2">Dodaj</button>
                 </form>
             </div>
