--- a/src/main/resources/templates/ingredient-register.html
+++ b/src/main/resources/templates/ingredient-register.html
@@ -77,8 +77,8 @@
             </a>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="admin/buttons.html">Baza składników</a>
-                    <a class="collapse-item" href="admin/cards.html">Posiłki</a>
+                    <a class="collapse-item" href="/ingredient-register">Baza składników</a>
+                    <a class="collapse-item" href="/meal-register">Posiłki</a>
                 </div>
             </div>
         </li>
@@ -234,18 +234,6 @@
                                 <div class="col">
                                     <h1 class="h3 mb-4 text-gray-800">Dostępne składniki :</h1>
                                 </div>
-                                <div class="col">
-                                    <div class="input-group">
-                                        <input type="text" class="form-control bg-light border-0 small"
-                                               placeholder="Wyszukaj składnik" aria-label="Search" name="search"
-                                               aria-describedby="basic-addon2" id="search">
-                                        <div class="input-group-append">
-                                            <button class="btn btn-primary" href="/ingredient-register">
-                                                <i class="fas fa-search fa-sm"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                         <table class="w-100">
@@ -269,19 +257,6 @@
                             </th:block>
                         </table>
                         <br>
-                        <nav aria-label="Page navigation example">
-                            <ul class="pagination justify-content-center">
-                                <li class="page-item disabled">
-                                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-                                </li>
-                                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item">
-                                    <a class="page-link" href="#">Next</a>
-                                </li>
-                            </ul>
-                        </nav>
                     </div>
                 </div>
             </div>
