--- a/src/main/resources/templates/meal-register.html
+++ b/src/main/resources/templates/meal-register.html
@@ -190,6 +190,8 @@
                         <table class="w-100">
                             <tr>
                                 <th>Nazwa składnika</th>
+                                <th>Dodaj</th>
+                                <th>Usuń</th>
                                 <th>Kalorie</th>
                                 <th>Białka</th>
                                 <th>Tłuszcze</th>
@@ -199,6 +201,8 @@
                             <th:block th:each="ingredient : ${ingredient}">
                                 <tr>
                                     <td th:text="${ingredient.getName()}"></td>
+                                    <td> <input type="button" value="+" class="btn" th:attrappend="class=${' ' + cssStyle}" /></td>
+                                    <td> <input type="button" value="-" class="btn" th:attrappend="class=${' ' + cssStyle}" /></td>
                                     <td th:text="${ingredient.getCalories()}"></td>
                                     <td th:text="${ingredient.getProtein()}"></td>
                                     <td th:text="${ingredient.getFats()}"></td>
@@ -222,9 +226,9 @@
                             </ul>
                         </nav>
                     </div>
-                </div>
-            </div>
-            <!-- /.container-fluid -->
+        </div>
+    </div>
+    <!-- /.container-fluid -->
 
         </div>
         <!-- End of Main Content -->
@@ -268,6 +272,7 @@
         </div>
     </div>
 </div>
+
 <!-- Bootstrap core JavaScript-->
 <script src="admin/vendor/jquery/jquery.min.js"></script>
 <script src="admin/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
