--- a/src/main/resources/templates/meal-register.html
+++ b/src/main/resources/templates/meal-register.html
@@ -77,8 +77,9 @@
             </a>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="admin/buttons.html">Baza składników</a>
-                    <a class="collapse-item" href="admin/cards.html">Posiłki</a>
+                    <a class="collapse-item" href="/ingredient-register">Baza składników</a>
+                    <a class="collapse-item" href="/meal-register">Posiłki</a>
+                    <a class="collapse-item" href="/diet-registration">Plan żywieniowy</a>
                 </div>
             </div>
         </li>
