--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,6 +36,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">O nas</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#projects">Oferta</a>
+          </li>
           <li class="dropdown">
             <a class="nav-link"id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Zarejestruj </a>
               <div class="dropdown-menu bg-primary" aria-labelledby="dropdownMenuButton">
@@ -47,8 +50,6 @@
           <li class="nav-item">
             <a class="nav-link" href="/user-login">Zaloguj</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/offer">Oferta</a>
           </li>
         </ul>
       </div>
