--- a/src/main/resources/templates/ingredient-base.html
+++ b/src/main/resources/templates/ingredient-base.html
@@ -77,8 +77,9 @@
             </a>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="admin/buttons.html">Baza składników</a>
-                    <a class="collapse-item" href="admin/cards.html">Posiłki</a>
+                    <a class="collapse-item" href="/ingredient-register">Baza składników</a>
+                    <a class="collapse-item" href="/meal-register">Posiłki</a>
+                    <a class="collapse-item" href="/diet-registration">Plan żywieniowy</a>
                 </div>
             </div>
         </li>
@@ -91,27 +92,6 @@
                 <span>Wskazówki i uwagi</span>
             </a>
         </li>
-
-        <!--    &lt;!&ndash; Divider &ndash;&gt;-->
-        <!--    <hr class="sidebar-divider">-->
-
-        <!--    &lt;!&ndash; Heading &ndash;&gt;-->
-        <!--    <div class="sidebar-heading">-->
-        <!--      Addons-->
-        <!--    </div>-->
-
-        <!-- Nav Item - Pages Collapse Menu -->
-        <!--    <li class="nav-item">-->
-        <!--      <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">-->
-        <!--        <i class="fas fa-fw fa-folder"></i>-->
-        <!--        <span>Pacjenci</span>-->
-        <!--      </a>-->
-        <!--      <div id="collapsePages" class="collapse show" aria-labelledby="headingPages" data-parent="#accordionSidebar">-->
-        <!--        <div class="bg-white py-2 collapse-inner rounded">-->
-        <!--          <a class="collapse-item active" href="/"> Dodaj Pacjenta</a>-->
-        <!--        </div>-->
-        <!--      </div>-->
-        <!--    </li>-->
 
         <!-- Divider -->
         <hr class="sidebar-divider d-none d-md-block">
